--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<head></head>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+</head>
+
 <body>
   <div id="calcBox">
-    <div id="display">DISPLAY</div>
+    <div id="display">0.1134</div>
     <div id="buttonArray">
-      <button id="b7">7</button>   <button id="b8">8</button>   <button id="b9">9</button>
-      <button id="b4">4</button>   <button id="b5">5</button>   <button id="b6">6</button>
-      <button id="b1">1</button>   <button id="b2">2</button>   <button id="b3">3</button>
-      <button id="b0">0</button>   <button id="b+">+</button>   <button id="b-">-</button>
-      <button id="bRST">c</button>   <button id="b*">*</button>   <button id="b/">/</button>
+      <button id="bEQ">=</button>
+      <button id="b7">7</button> <button id="b8">8</button> <button id="b9">9</button>
+      <button id="b4">4</button> <button id="b5">5</button> <button id="b6">6</button>
+      <button id="b1">1</button> <button id="b2">2</button> <button id="b3">3</button>
+      <button id="b0">0</button> <button id="bPLUS">+</button> <button id="bMIN">-</button>
+      <button id="bRST">c</button> <button id="bMULT">*</button> <button id="bDIV">/</button>
     </div>
   </div>
 </body>
