--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div id="calcBox">
-    <div id="display">0.1134</div>
+    <textarea rows="1" cols="10" maxlength="25" id="display">0.14</textarea>
     <div id="buttonArray">
       <button id="bEQ">=</button>
       <button id="b7">7</button> <button id="b8">8</button> <button id="b9">9</button>
@@ -15,6 +15,7 @@
       <button id="b1">1</button> <button id="b2">2</button> <button id="b3">3</button>
       <button id="b0">0</button> <button id="bPLUS">+</button> <button id="bMIN">-</button>
       <button id="bRST">c</button> <button id="bMULT">*</button> <button id="bDIV">/</button>
+      <button id="bDEC">.</button>
     </div>
   </div>
 </body>
