--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 
 <body>
   <div id="calcBox">
-    <textarea rows="1" cols="10" maxlength="25" id="display">0.14</textarea>
+    <textarea rows="1" cols="10" maxlength="25" id="display" readonly=true>0</textarea>
     <div id="buttonArray">
       <button id="bEQ">=</button>
       <button id="b7">7</button> <button id="b8">8</button> <button id="b9">9</button>
@@ -21,4 +21,6 @@
       <button id="bDEC">.</button>
     </div>
   </div>
+  <script src="calculator.js"></script>
 </body>
+</html>
